# OpenLineage

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .taskrc.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_QUALITY_AND_SECURITY.md  COMMITTERS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GOVERNANCE.md  Jenkinsfile  LICENSE.insert.txt  Makefile  NOTICE.txt  README.md  RELEASING.md  TECHNICAL_STEERING_COMMITTEE.md  Taskfile.yml  build.gradle  build.rs  debug.patch  go.work  new-version.sh  pmd-config.xml  pyproject.toml  release.sh  ruff.toml  settings.gradle  spelling_wordlist.txt  test_python.sh  why-the-dco.md
client/python/: .gitignore  README.md  Taskfile.yml  pyproject.toml  pytest.ini  redact_fields.yml  setup.cfg  setup.py  test-requirements.txt  tox.ini  version.py
client/python/docs/: conf.py  convert.py  index.rst  release-api-reference.sh
client/python/docs/source/: openlineage.client.rst
client/python/openlineage/: client.py  constants.py  facet.py  run.py  serde.py
client/python/openlineage/client/: __init__.py  client.py  constants.py  dataset.py  deserialize.py  event_v2.py  facet.py  facet_v2.py  facets.py  filter.py  run.py  serde.py  tags.py  transport.py  utils.py  uuid.py
client/python/scripts/: namespaces.py
client/python/tests/: conftest.py  example_full_event.json  nominal_time_without_end.json  openlineage.yml  serde_example.json  serde_example_dataset_event.json  serde_example_job_event.json  serde_example_run_event.json  test_amazon_datazone.py  test_async_http.py  test_client.py  test_composite.py  test_datadog.py  test_dataset.py  test_deserialize.py  test_event_normalization.py  test_event_reducing.py  test_events.py  test_facet.py  test_facet_v2.py  test_factory.py  test_file.py  test_gcplineage.py  test_http.py  test_http_integration.py  test_jwt_token_provider.py  test_kafka.py  test_msk_iam.py  test_source_code_location.py  test_utils.py  test_uuid.py  transport.py
client/python/tests/config/: config.yml  dataset.yaml  exact_filter.yml  http.yml  openlineage.yml  regex_filter.yml  test-transport.yaml
client/python/tests/dataset/: __init__.py  test_config.py  test_normalizer.py  test_reducer.py  test_trimmers.py
client/python/tests/fixtures/: events.py  mock_responses.py
client/python/tests/generator/: __init__.py  test_base.py  test_cli.py
client/python/tests/integration/: docker-compose.yml
client/python/tests/transform/: test_transform.py
integration/airflow/: .gitignore  Dockerfile.tests  README.md  dev-requirements-1.x.txt  dev-requirements-2.x.txt  dev-requirements.txt  integration-requirements.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py
integration/airflow/docs/: lineage_in_operators.md  task-lifecycle.md
integration/airflow/facets/: AirflowDagRunFacet.json  AirflowRunFacet.json
integration/airflow/openlineage/airflow/: __init__.py  adapter.py  backend.py  dag.py  facets.py  listener.py  listener_executor.py  macros.py  plugin.py  task_policy.py  utils.py  version.py
integration/airflow/openlineage/lineage_backend/: __init__.py  converters.py
integration/airflow/scripts/: run-dev-airflow.sh
integration/airflow/tests/: __init__.py  conftest.py  log_config.py  pytest.ini  test_facets.py  test_listener.py  test_location.py  test_macros.py  test_openlineage_adapter.py  test_openlineage_dag.py  test_utils.py
integration/airflow/tests/extractors/: __init__.py  athena_metadata.json  job_details.json  redshift_statement_details.json  redshift_table_details.json  test_athena_extractor.py  test_base.py  test_bash_extractor.py  test_bigquery_extractor.py  test_converters.py  test_dbapi_utils.py  test_dbt_cloud_extractor.py  test_default_extractor.py  test_extractor_manager.py  test_extractors.py  test_ftp_extractor.py  test_gcs_extractor.py  test_great_expectations_extractor.py  test_mysql_extractor.py  test_postgres_extractor.py  test_python_extractor.py  test_redshift_data_extractor.py  test_redshift_sql_extractor.py  test_s3_extractor.py  test_s3_snowflake_extractor.py  test_sagemaker_extractors.py  test_sftp_extractor.py  test_snowflake_check_extractor.py  test_snowflake_extractor.py  test_sql_check_extractors.py  test_sql_extractor.py  test_trino_extractor.py
integration/airflow/tests/failures/: Dockerfile  docker-compose-2.yml
integration/common/: README.md  Taskfile.yml  pyproject.toml  setup.cfg  setup.py
integration/common/script/: match.py
integration/common/tests/: test_dataset.py  test_models.py  test_snowflake.py  test_utils.py
integration/dagster/: README.md  pyproject.toml  setup.cfg  setup.py
integration/dagster/tests/: __init__.py  conftest.py  sample_job.py  test_adapter_client.py  test_adapter_pipeline.py  test_adapter_step.py  test_sensor_cursor.py  test_sensor_evaluation.py  test_utils.py
integration/dbt/: .gitignore  README.md  Taskfile.yml  pyproject.toml  setup.cfg  setup.py
integration/dbt/bigquery/: README.md  setup.cfg  setup.py
integration/dbt/scripts/: dbt-ol
integration/dbt/snowflake/: README.md  setup.cfg  setup.py
integration/dbt/tests/: test_main.py
integration/prefect/: .pre-commit-config.yaml  README.md  __init__.py  adapter.py  listener.py  pyproject.toml
integration/prefect/facets/: deploymentFacet.py
integration/prefect/tests/: conftest.py  test_adapter.py  test_external_dataset.py  test_facets.py  test_flow_runner.py
integration/sql/: .bumpversion.cfg  Cargo.toml  Dockerfile  Dockerfile.python  INTERFACE.md  README.md  Taskfile.yml  pyproject.toml  test_python.sh
integration/sql/iface-java/: Cargo.toml  build.gradle  gradle.properties  pom.xml  settings.gradle
integration/sql/iface-java/src/: lib.rs
integration/sql/iface-py/: Cargo.toml  README.md  build.rs  openlineage_sql.pyi  pyproject.toml
integration/sql/impl/: Cargo.toml
integration/sql/script/: build-macos.sh  build.sh
integration/sql/src/: bigquery.rs  lib.rs
integration/sql/tests/: tests_copy.rs  tests_create.rs  tests_cte.rs  tests_delete.rs  tests_insert.rs  tests_merge.rs  tests_select.rs  tests_small.rs  tests_tpcds.rs  tests_update.rs
(+5431 files in other folders)
