[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.15.1"
sqlparser = "0.14.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]