[bumpversion]
current_version = 0.0.1

[metadata]
description-file = README.md

[flake8]
max-line-length=99

commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<rc>.*)
serialize =
	{major}.{minor}.{patch}{rc}
	{major}.{minor}.{patch}

[bumpversion:file:setup.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:version.py]
search = VERSION = "{current_version}"
replace = VERSION = "{new_version}"