[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[project]
name = "openlineage-airflow"
version = "1.36.0"
description = "OpenLineage integration with Airflow"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "OpenLineage"}]
keywords = ["openlineage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "attrs>=20.0",
    "openlineage-integration-common[sql]==1.36.0",
    "openlineage-python==1.36.0",
]

[project.optional-dependencies]
tests = [
    "aiohttp",  # tox Airflow 2.3.4 does not install it by default
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mock",
    "SQLAlchemy",  # must be set to 1.3.* for airflow tests compatibility
    "Flask-SQLAlchemy",  # must be set to 2.4.* for airflow tests compatibility
    "pandas-gbq==0.14.1",  # must be set to 0.14.* for airflow tests compatibility
    "snowflake-connector-python",
]
airflow = [
    "apache-airflow-providers-postgres>=2.0.0",
    "apache-airflow-providers-mysql>=2.0.0",
    "apache-airflow-providers-trino>=3.1.0",
    "apache-airflow-providers-snowflake>=2.1.0",
    "apache-airflow-providers-google>=5.0.0",
    "apache-airflow-providers-amazon>=3.1.1",
    "apache-airflow-providers-sftp>=2.1.1",
    "apache-airflow-providers-ssh>=2.1.0",
    "apache-airflow-providers-ftp>=3.3.0",
    "apache-airflow-providers-dbt-cloud<3.2.0",
    "airflow-provider-great-expectations==0.1.5",
    "great-expectations<=0.15.23",
    "notebook<7.4.0",
    "protobuf>=3.20,<4.23",
]
dev = [
    "aiohttp",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mock",
    "SQLAlchemy",
    "Flask-SQLAlchemy",
    "pandas-gbq==0.14.1",
    "snowflake-connector-python",
]

[project.urls]
Homepage = "https://openlineage.io/"
Source = "https://github.com/OpenLineage/OpenLineage/tree/main/integration/airflow"

[project.entry-points."airflow.plugins"]
OpenLineagePlugin = "openlineage.airflow.plugin:OpenLineagePlugin"

[tool.uv.sources]
openlineage-integration-common = {workspace = true}
openlineage-python = {workspace = true}

[tool.uv.build-backend]
module-name = "openlineage.airflow"

[tool.ruff]
line-length = 110
lint.select = [
    "F",
    "E",
    "W",
    "I001"
]
target-version = "py39"
lint.ignore-init-module-imports = true
src = ["openlineage", "tests"]
namespace-packages = ["openlineage/airflow"]