[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[project]
name = "openlineage-airflow"
version = "1.37.0"
description = "OpenLineage integration with Airflow"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "OpenLineage"}]
keywords = ["openlineage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "attrs>=20.0",
    "openlineage-integration-common==1.37.0",
    "openlineage_sql==1.37.0",
    "openlineage-python==1.37.0",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.5.2,<2.11",
    "apache-airflow-providers-postgres>=2.0.0,<=5.4.0",
    "apache-airflow-providers-mysql>=2.0.0,<=4.0.2",
    "apache-airflow-providers-trino>=3.1.0,<=4.3.2",
    "apache-airflow-providers-snowflake>=2.1.0,<=4.0.4",
    "apache-airflow-providers-google>=5.0.0,<=8.11.0",
    "apache-airflow-providers-amazon>=3.1.1,<=7.3.0",
    "apache-airflow-providers-sftp>=2.1.1,<=4.2.4",
    "apache-airflow-providers-ssh>=2.1.0,<=3.5.0",
    "apache-airflow-providers-ftp>=3.3.0,<=3.3.1",
    "apache-airflow-providers-dbt-cloud>=1.0.0,<=3.1.0",
    "airflow-provider-great-expectations>=0.1.5,<=0.2.6",
    "great-expectations>=1.0.0",
    "notebook>=6.0.0,<7.4.0",
    "protobuf>=3.20,<4.24",
]
dev = [
    "aiohttp",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mock",
    "SQLAlchemy",
    "Flask-SQLAlchemy",
    "snowflake-connector-python",
    "mypy",
    "tox",
    "tox-uv",
    "types-PyYAML",
    "types-paramiko",
    "types-python-dateutil",
    "types-requests"
]

[project.urls]
Homepage = "https://openlineage.io/"
Source = "https://github.com/OpenLineage/OpenLineage/tree/main/integration/airflow"

[project.entry-points."airflow.plugins"]
OpenLineagePlugin = "openlineage.airflow.plugin:OpenLineagePlugin"

[tool.uv.sources]
openlineage-integration-common = { path = "../common", editable = true }
openlineage_sql = { path = "../sql/iface-py", editable = true }
openlineage-python = { path = "../../client/python", editable = true }

[tool.uv.build-backend]
module-name = "openlineage"
namespace = true

[tool.ruff]
line-length = 110
lint.select = [
    "F",
    "E",
    "W",
    "I001"
]
target-version = "py39"
src = ["openlineage", "tests"]
namespace-packages = ["openlineage/airflow"]

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "attr-defined"

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-uv
env_list = py3-airflow-2.5.2,py3-airflow-2.6.1
skip_missing_interpreters = true

[testenv]
runner = uv-venv-runner
description = run tests with Airflow version matrix
skip_install = true
package = editable
deps =
    pytest
    pytest-cov
    pytest-mock
    airflow-2.5.2: apache-airflow==2.5.2
    airflow-2.6.1: apache-airflow==2.6.1
set_env =
    AIRFLOW__CORE__SQL_ALCHEMY_CONN = sqlite:///{envdir}/airflow.db
    AIRFLOW_HOME = {envdir}
    PYTHONPATH = {toxinidir}/tests
    AIRFLOW__CORE__LOGGING_CONFIG_CLASS = log_config.LOGGING_CONFIG
    airflow-2.5.2: AIRFLOW_VERSION = 2.5.2
    airflow-2.6.1: AIRFLOW_VERSION = 2.6.1
    UV_PROJECT_ENVIRONMENT={envdir}
allowlist_externals = bash
commands_pre =
      # First sync the project dependencies (which includes openlineage-integration-common as editable)
      uv sync --python {env_python} --frozen --inexact --no-install-project
      # Then install only the specific airflow version
      uv pip install apache-airflow=={env:AIRFLOW_VERSION}
commands =
    bash -ec "if [[ ! -f $0/airflow.db ]]; then airflow db reset -y; fi" {envdir}
    uv run pytest --cov=src/openlineage --junitxml=test-results/junit.xml tests/
    coverage xml
"""

[tool.bumpversion]
current_version = "1.37.0"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<rc>.*)"
serialize = [
    "{major}.{minor}.{patch}{rc}",
    "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "openlineage/airflow/version.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""