[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[project]
name = "openlineage-dagster"
version = "1.37.0"
description = "OpenLineage integration with Dagster"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "OpenLineage"}]
keywords = ["openlineage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "attrs>=19.3",
    "cattrs",
    "protobuf>=4",
    "dagster>=1.0.0,<=1.6.9",
    "openlineage-python==1.37.0",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "mypy>=0.9.6",
    # Dagster 1.5.5+ supports pydantic v2
    # https://github.com/dagster-io/dagster/issues/15162
    "pydantic>=1.10.0",
    "sqlalchemy<2.0.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "mypy>=0.9.6",
    "pydantic>=1.10.0",
    "sqlalchemy<2.0.0",
]

[project.urls]
Homepage = "https://openlineage.io/"
Source = "https://github.com/OpenLineage/OpenLineage/tree/main/integration/dagster"

[tool.uv.sources]
openlineage-python = {workspace = true}

[tool.uv.build-backend]
module-name = "openlineage.dagster"

[tool.ruff]
line-length = 110
lint.select = [
    "F",
    "E",
    "W",
    "I001"
]
target-version = "py39"
src = ["openlineage", "tests"]
namespace-packages = ["openlineage/dagster"]

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.mypy]
ignore_missing_imports = true
implicit_reexport = false

[tool.bumpversion]
current_version = "1.37.0"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<rc>.*)"
serialize = [
    "{major}.{minor}.{patch}{rc}",
    "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "openlineage/dagster/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""