[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[project]
name = "openlineage-dbt"
version = "1.37.0"
description = "OpenLineage integration with dbt"
readme = "README.md"
authors = [{name = "OpenLineage"}]
requires-python = ">=3.9"
keywords = ["openlineage"]
dependencies = [
    "tqdm>=4.62.0",
    "openlineage-integration-common[dbt]==1.37.0",
    "dbt-core>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov", 
    "pytest-xdist>=2.5.0",
    "mock",
    "ruff",
    "mypy>=0.9.6",
    "python-dateutil",
    "requests>=2.25.0",
    "docker>=6.0.0",
    "mypy"
]

[project.scripts]
dbt-ol = "openlineage.dbt:main"

[tool.uv.sources]
openlineage-integration-common = { path = "../common", editable = true }

[tool.uv.build-backend]
module-name = "openlineage"
namespace = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:warnings"
pythonpath = "."

[tool.ruff]
line-length = 110
lint.select = [
    "F",
    "E",
    "W",
    "I001"
]
target-version = "py39"
src = ["openlineage", "tests"]
namespace-packages = ["openlineage/common"]

[tool.mypy]
ignore_missing_imports = true

[tool.bumpversion]
current_version = "1.37.0"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<rc>.*)"
serialize = [
    "{major}.{minor}.{patch}{rc}",
    "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "openlineage-integration-common[dbt]=={current_version}"
replace = "openlineage-integration-common[dbt]=={new_version}"