[package]
name = "openlineage_sql_java"
description = "Java interface for the Rust OpenLineage lineage extraction library"
version = "0.20.4"
edition = "2021"
authors = ["Piotr Wojtczak <piotr.m.wojtczak@gmail.com>", "Maciej Obuchowski <obuchowski.maciej@gmail.com>"]
keywords = ["sql", "lineage", "openlineage", "java", "jni"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "openlineage_sql_java"
crate-type = ["cdylib"]

[dependencies]
openlineage_sql = {path = "../impl"}
anyhow = {workspace = true}
jni = "0.20.0"
sqlparser = {git = "https://github.com/mobuchowski/sqlparser-rs", branch = "sqlp-release"}
