[package]
name = "openlineage_sql_python"
description = "Python interface for the Rust OpenLineage lineage extraction library"
version = "1.4.1"
edition = "2021"
authors = ["Maciej Obuchowski <obuchowski.maciej@gmail.com>"]
keywords = ["sql", "lineage", "openlineage", "python"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "openlineage_sql"
crate-type = ["cdylib"]

[dependencies]
openlineage_sql = {path = "../impl"}
anyhow = {workspace = true}
pyo3 = {version = "0.19.0", features = ["extension-module", "abi3", "abi3-py37", "anyhow"]}

[build-dependencies]
pyo3-build-config = {version = "0.19.0"}

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
